--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
             name="description"
-            content="SysMusic Music Server - {{.Version}}"
+            content="SysMusic Music Server"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
